# augent

./: .clippy.toml  .fossil.toml  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CROSS_PLATFORM_IMPROVEMENTS.md  Cargo.toml  Cross.toml  LICENSE  README.md  REFACTORING_PLAN.md  TODO.md  augent-dev  dynamic-mcp.json  mise.toml  package.json  platforms.jsonc  pyproject.toml  test.yaml
.augent/: augent.index.yaml  augent.workspace.yaml  augent.yaml
.augent/agents/: ai-engineer.md
.augent/my-local-bundle/commands/: my-command.md
.claude/: settings.json  settings.local.json
.claude/commands/: improve-agent.md
.cursor/: mcp.json
.gemini/agents/: nlp-engineer.md
.github/workflows/: ci.yml  release.yml
.opencode/: oc.json  oh-my-opencode.json  opencode.jsonc
.opencode/skills/augent/: SKILL.md
.opencode/skills/augent/modules/: -.md
.opencode/skills/rust-idioms/: AGENTS.md
.sisyphus/: ralph-loop.local.md
docs/: BUNDLES.md  COMMANDS.md  WORKSPACE.md  bundles.md  commands.md  platforms.md  platforms_schema.md  workspace.md
docs/implementation/: ARCHITECTURE.md  DOCUMENTATION.md  PLAN.md  PRD.md  TASKS.md  TESTING.md  TESTING_COVERAGE_GAPS.md  architecture.md  building.md  documentation.md  interactive-testing.md  npm-distribution.md  plan.md  platform-path-reference.md  refactoring.md  tasks.md  testing.md
docs/implementation/adrs/: 001-bundle-format.md  002-platform-system.md  003-locking-mechanism.md  004-atomic-operations.md
docs/implementation/mvp/: phase_0.md  prd.md
docs/implementation/specs/: bundles.md  install-command.md  install-dependencies.md  platform-independence.md  platform-system.md  uninstall-command.md  uninstall-dependencies.md  workspace-management.md
docs/pre-implementation/: PHASE_0.md  phase_0.md  prd.md
scripts/: augent-wrapper.js  postinstall.js
src/: cli.rs  error.rs  hash.rs  main.rs  path_utils.rs  progress.rs  temp.rs  test_fixtures.rs
src/cache/: AGENTS.md  bundle_name.rs  cache_entry.rs  clone.rs  index.rs  lookup.rs  mod.rs  operations.rs  paths.rs  populate.rs  stats.rs  stats_tests.rs
src/cli/: cache.rs  completions.rs  install.rs  list.rs  mod.rs  show.rs  uninstall.rs
src/commands/: clean_cache.rs  completions.rs  helpers.rs  install.rs  list.rs  menu.rs  mod.rs  show.rs  uninstall.rs  version.rs
src/common/: bundle_utils.rs  config_utils.rs  display_utils.rs  fs.rs  mod.rs  path_normalizer.rs  string_utils.rs
src/config/: AGENTS.md  bundle.rs  index.rs  lockfile.rs  marketplace.rs  mod.rs  utils.rs  workspace.rs
src/config/bundle/: dependency.rs  mod.rs  serialization.rs  tests.rs
src/config/index/: bundle.rs  mod.rs  serialization.rs  tests.rs
src/config/lockfile/: bundle.rs  mod.rs  serialization.rs  source.rs  tests.rs
src/config/marketplace/: mod.rs  operations.rs
src/domain/: bundle.rs  mod.rs  platform.rs  resource.rs
src/error/: AGENTS.md  bundle.rs  cache.rs  config.rs  deps.rs  fs.rs  git.rs  lockfile.rs  macros.rs  mod.rs  platform.rs  source.rs  tests.rs  workspace.rs
src/git/: auth.rs  checkout.rs  clone.rs  error.rs  mod.rs  refs.rs  url.rs  url_parser.rs
src/installer/: AGENTS.md  apply_transform_rule_fn.rs  detection.rs  discovery.rs  file_ops.rs  files.rs  merge.rs  mod.rs  parser.rs  pipeline.rs  tests.rs  writer.rs
src/installer/files/: tests.rs
src/installer/formats/: antigravity.rs  augment.rs  claude.rs  claude_plugin.rs  codex.rs  copilot.rs  cursor.rs  factory.rs  gemini.rs  junie.rs  kilo.rs  kiro.rs  mod.rs  opencode.rs  plugin.rs  qwen.rs  roo.rs  warp.rs  windsurf.rs
src/operations/: AGENTS.md  install.rs  list.rs  mod.rs  show.rs  uninstall.rs
src/operations/install/: AGENTS.md  config.rs  context.rs  display.rs  execution.rs  lockfile.rs  mod.rs  names.rs  orchestrator.rs  resolution.rs  workspace.rs
src/operations/list/: display.rs  mod.rs
src/operations/show/: mod.rs  selection.rs
src/operations/uninstall/: confirmation.rs  dependency.rs  execution.rs  file_utils.rs  mod.rs  selection.rs
src/platform/: AGENTS.md  detection.rs  loader.rs  merge.rs  merger.rs  mod.rs  registry.rs  tests.rs  transform.rs  transformer.rs
src/platform/tests/: format_conversion.rs  integration.rs  mod.rs  platform_detection.rs  platform_transformations.rs
src/resolver/: AGENTS.md  config.rs  discovery.rs  fetcher.rs  git.rs  graph.rs  local.rs  mod.rs  operation.rs  sort.rs  synthetic.rs  topology.rs  validation.rs
src/resolver/discovery/: cache.rs  git.rs  helpers.rs  local.rs  marketplace.rs  mod.rs
src/resource/: mod.rs
src/source/: AGENTS.md  bundle.rs  bundle_source.rs  git_source.rs  mod.rs
src/transaction/: AGENTS.md  mod.rs  tests.rs
src/ui/: display.rs  formatter.rs  mod.rs  platform_extractor.rs
src/universal/: frontmatter.rs  mod.rs
src/workspace/: AGENTS.md  config.rs  config_operations.rs  detection.rs  git.rs  init.rs  initialization.rs  mod.rs  modified.rs  operations.rs  path.rs  rebuild.rs
tests/: INTERACTIVE_TESTING.md  bundle_discovery_tests.rs  bundle_metadata_tests.rs  bundle_spec_tests.rs  clean_cache_tests.rs  cli_options_tests.rs  cli_tests.rs  concurrency_tests.rs  doc_examples_tests.rs  dry_run_tests.rs  edge_case_tests.rs  error_handling_tests.rs  error_path_tests.rs  install_dependencies_spec_tests.rs  install_dependency_tests.rs  install_dir_bundle.rs  install_git_sources.rs  install_integration.rs  install_interactive_tests.rs  install_lockfile_tests.rs  install_merge_tests.rs  install_platform_tests.rs  install_sub_bundle_tests.rs  install_subdirectory_git_tests.rs  install_yaml_lifecycle_tests.rs  integration_tests.rs  interactive_install_tests.rs  interactive_menu_tests.rs  lazy_index_init_tests.rs  lazy_workspace_init_tests.rs  list_command_tests.rs  platform_specific_tests.rs  show_command_tests.rs  test_at_prefix_github_shorthand.rs  uninstall_current_dir.rs  uninstall_dependencies_tests.rs  uninstall_dir_cascade_tests.rs  uninstall_file_tests.rs  uninstall_interactive_tests.rs  uninstall_multiplatform_tests.rs  (+4 more)
tests/common/: interactive.rs  mod.rs
tests/config/: mod.rs
(+32 files in other folders)
