[package]
name = "augent"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Anssi Syrjäsalo"]
description = "Lean and platform independent AI coding agent package manager"
repository = "https://github.com/asyrjasalo/augent"
license = "AGPL-3.0"
keywords = ["ai", "agent", "package", "manager"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env", "string"] }
clap_complete = "4"

# Error handling
miette = { version = "7", features = [] }
thiserror = "2"

# Configuration & serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Git operations
git2 = { version = "0.19", default-features = false, features = ["ssh", "https", "vendored-openssl"] }
# Use vendored-openssl to avoid CI build issues on macOS and Windows
gix = { version = "0.78", features = ["blocking-network-client"] }
# auth-git2 is deprecated, use git2's built-in auth callback instead

# File system operations
fslock = "0.2"
walkdir = "2"
tempfile = "3"
dirs = "5"

# Hashing
blake3 = "1"

# Glob patterns
glob = "0.3"

# URL parsing
url = "2"

# Regex for pattern matching
regex = "1"

# Terminal UI
crossterm = "0.28"
dialoguer = "0.11"

[dev-dependencies]
# Integration testing
assert_cmd = "2"
assert_fs = "1"
predicates = "3"

[features]
default = []

[profile.release]
lto = true
strip = true
codegen-units = 1

[[bin]]
name = "augent"
path = "src/main.rs"
