[package]
name = "augent"
version = "0.5.2"
edition = "2024"
rust-version = "1.85"
authors = ["Anssi Syrjäsalo"]
license = "AGPL-3.0"
description = "Lean package manager for various AI coding platforms"
readme = "README.md"
repository = "https://github.com/asyrjasalo/augent"
documentation = "https://docs.rs/augent"
keywords = ["ai", "agent", "package", "manager"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".augent/",
    ".claude/",
    ".github/",
    ".opencode/",
    "docs/implementation/",
    ".codespellrc",
    '.gitignore',
    ".pre-commit-config.yaml",
    "Cross.toml",
    "CLAUDE.md",
    "pyproject.toml"
]

[[bin]]
name = "augent"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env", "string"] }
clap_complete = "4"

# Error handling
miette = { version = "7", features = [] }
thiserror = "2"

# Configuration & serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Git operations
git2 = { version = "0.19", default-features = false, features = ["ssh", "https", "vendored-openssl"] }

# File system operations
walkdir = "2"
tempfile = "3"
dirs = "5"
path-clean = "0.1"

# Hashing
blake3 = "1"

# Glob pattern matching
wax = "0.6"

# Terminal UI
console = "0.15"
inquire = "0.9"

[dev-dependencies]
# Integration testing
assert_cmd = "2"
predicates = "3"

# Cross-platform PTY for interactive testing
expectrl = "0.8"

# Serialize tests that share process-wide state (e.g. AUGENT_CACHE_DIR)
serial_test = "3"

[features]
default = []

[profile.release]
lto = true
strip = true
codegen-units = 1
