[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "augent"
version = "0.1.0"
description = "Lean package manager for various AI coding platforms"
authors = [{ name = "Anssi Syrjäsalo" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "AGPL-3.0" }
keywords = ["ai", "agent", "package", "manager"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://crates.io/crates/augent"
Repository = "https://github.com/asyrjasalo/augent"
Documentation = "https://github.com/asyrjasalo/augent/tree/main/docs"

[tool.maturin]
bindings = "bin"
strip = true
